# play-chain

./: .gitignore  Cargo.toml  README.md
proof-of-stake/: Cargo.toml
proof-of-stake/src/: block.rs  blockchain.rs  lib.rs  main.rs  malicious_detector.rs  stake.rs  transaction.rs  validator.rs
proof-of-work/: Cargo.toml
proof-of-work/src/: main.rs
proof-of-work/src/domain/: block.rs  blockchain.rs  mod.rs  network.rs  transaction.rs  wallet.rs
src/: main.rs  sign_helper.rs
src/domain/: block.rs  blockchain.rs  mod.rs  network.rs  transaction.rs  wallet.rs
src/util/: converter.rs  mod.rs
