[package]
name = "proof-of-work"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
chrono = "0.4"
hex = "0.4"
ed25519-dalek={version="2.1", features=["rand_core"]}
rand="0.8"
anyhow = "1.0"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
clap = "4.5"